--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -60,7 +60,7 @@
             <h1>Find Your Dream Car Today!</h1>
             <p>Explore our premium selection and experience the ride of your life.</p>
             <div class="hero-buttons">
-                <a href="test-drive.html" class="btn primary-btn">Schedule a Test Drive</a>
+                <a href="contact.html" class="btn primary-btn">Schedule a Test Drive</a>
         </div>
         </div>
     </div>
@@ -98,8 +98,8 @@
 
 </main>
 
-<script src="scripts/final.js"></script>
-<script src="scripts/inventory.js"></script>
+<script src="scripts/final.js" defer></script>
+<script src="scripts/inventory.js" defer></script>
    
       <footer>
        
