--- a/finalproject/inventory.html
+++ b/finalproject/inventory.html
@@ -63,7 +63,7 @@
     <h1>Find Your Dream Car Today!</h1>
     <p>Explore our premium selection and experience the ride of your life.</p>
     <div class="test-drive-button">
-        <a href="test-drive.html" class="btn primary-btn">Schedule a Test Drive</a>
+        <a href="contact.html" class="btn primary-btn">Schedule a Test Drive</a>
 </div>
 
 <dialog id="mydialog"></dialog>
@@ -72,8 +72,8 @@
 
 </main>
 
-<script src="scripts/final.js"></script>
-<script src="scripts/inventory.js"></script>
+<script src="scripts/final.js" defer></script>
+<script src="scripts/inventory.js" defer></script>
    
       <footer>
        
