--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -54,102 +54,28 @@
 
 <main>
 
-  <div class="inventory-folder">
-    
-    <!-- Test Drive Form -->
-    <div class="test-drive-form-container">
-      <form class="test-drive-form" method="get" action="thankyou.html">
-        <h1>Schedule a Test Drive</h1>
+    <div class="thankyou-folder">
+        <div class="left-thankyou">
+                <h1>Thank you very much!</h1>
 
-        <!-- Customer Info -->
-        <label>
-            Full Name:
-            <input type="text" name="fullName" required placeholder="Your Full Name">
-        </label>
-
-        <label>
-            Date of Birth:
-            <input type="date" name="dob" required>
-        </label>
-
-        <label>
-            Contact Number:
-            <input type="tel" name="phone" required placeholder="09123456789" pattern="[0-9]{10,11}">
-        </label>
-
-        <label>
-            Email Address:
-            <input type="email" name="email" required placeholder="you@example.com">
-        </label>
-
-        <!-- Driver Info -->
-        <label>
-            Driver's License Number:
-            <input type="text" name="licenseNumber" required placeholder="Driver License No.">
-        </label>
-
-        <label>
-            License Expiry Date:
-            <input type="date" name="licenseExpiry" required>
-        </label>
-
-        <label>
-            Driving Experience (Years):
-            <input type="text" name="experience" required placeholder="e.g., 5">
-        </label>
-
-        <!-- Vehicle Info -->
-        <label>
-            Vehicle Model Requested:
-            <input type="text" name="vehicleModel" required placeholder="Car Model">
-        </label>
-
-        <label>
-            Preferred Date:
-            <input type="date" name="testDriveDate" required>
-        </label>
-
-        <label>
-            Preferred Time:
-            <input type="time" name="testDriveTime" required>
-        </label>
-
-        <label>
-            Number of Passengers:
-            <input type="text" name="passengers" placeholder="Optional">
-        </label>
-
-        <label>
-            Special Requests / Notes:
-            <textarea name="notes" placeholder="Optional notes or requests"></textarea>
-        </label>
-
-        <!-- Submit Button -->
-        <button id="inventory-button" type="submit">Book Test Drive</button>
-      </form>
+                <!-- reference to the thankyou.js -->
+                <div id="results"></div> 
+        </div>
+    <div class="right-thankyou">
+        <p>Thank you for booking a test drive! Our team will contact you shortly to confirm your appointment.</p>
+        <div class="car-wrapper">
+            <img src="images/ford_mustang.webp" alt="ending image" class="ending-image" loading="lazy">
+            <div class="headlight"></div>
+        </div>
     </div>
 
-    <!-- Map -->
-    <div class="map-folder">
-  <h2>Our Location:</h2>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.462011411112!2d124.55768827355813!3d11.178417651653255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3307ff61a02291a9%3A0x9554cff6a7d370fa!2sThe%20Church%20of%20Jesus%20Christ%20of%20Latter-day%20Saints!5e1!3m2!1sen!2sph!4v1764598675980!5m2!1sen!2sph"
-   width="600" 
-   height="450" 
-   style="border:0;" 
-   allowfullscreen="" 
-   loading="lazy" 
-   referrerpolicy="no-referrer-when-downgrade">
-  </iframe>
-</div>
-
-
-  </div>
+    </div>
 
 </main>
 
 
 <script src="scripts/final.js" defer></script>
-<script src="scripts/inventory.js" defer></script>
+<script src="scripts/thankyou.js" defer></script>
    
       <footer>
        
