home and inventory checkpoint with ES MODULE

--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -147,7 +147,7 @@
 
 </main>
 
-
+<script src="scripts/header_footer.js" defer></script>
 <script src="scripts/final.js" defer></script>
 <script src="scripts/inventory.js" defer></script>
    
