--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -56,7 +56,7 @@
 
     <div class="thankyou-folder">
         <div class="left-thankyou">
-                <h1>Thank you very much!</h1>
+                <h1>Booking Confirmation!</h1>
 
                 <!-- reference to the thankyou.js -->
                 <div id="results"></div> 
@@ -73,7 +73,7 @@
 
 </main>
 
-
+<script src="scripts/header_footer.js" defer></script>
 <script src="scripts/final.js" defer></script>
 <script src="scripts/thankyou.js" defer></script>
    
