--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -67,7 +67,7 @@
 </div>
 
 <div class="featured-cars">
-    <h2>Featured Cars</h2>
+    <h2>HOT PICKS OF THE WEEK</h2>
     <div id="cars-container" class="grid"></div>
 </div>
 
@@ -98,8 +98,8 @@
 
 </main>
 
+<script src="scripts/header_footer.js" defer></script>
 <script src="scripts/final.js" defer></script>
-<script src="scripts/inventory.js" defer></script>
    
       <footer>
        
