--- a/finalproject/inventory.html
+++ b/finalproject/inventory.html
@@ -55,7 +55,7 @@
 <main>
 
 <div class="featured-cars">
-    <h2>Our Top Choicest Cars</h2>
+    <h2>OUR TOP CHOICEST CARS</h2>
     <div id="cars-container" class="grid"></div>
 </div>
 
@@ -72,8 +72,8 @@
 
 </main>
 
-<script src="scripts/final.js" defer></script>
-<script src="scripts/inventory.js" defer></script>
+<script src="scripts/header_footer.js" defer></script>
+<script src="scripts/inventory.js" type="module"></script>
    
       <footer>
        
