--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -54,17 +54,16 @@
 
 <main>
    <div class="hero-box">
-    <img src="images/hero_image.jpg" alt="hero image" class="hero-image">
+    <img src="images/hero_image.jpg" alt="hero image" class="hero-image" loading="lazy">
        
         <div class="cta">
             <h1>Find Your Dream Car Today!</h1>
             <p>Explore our premium selection and experience the ride of your life.</p>
             <div class="hero-buttons">
-                <a href="contact.html" class="btn primary-btn">Schedule a Test Drive</a>
+                <a href="contact.html" class="btn primary-btn"><strong>Schedule a Test Drive</strong></a>
         </div>
         </div>
     </div>
-</div>
 
 <div class="featured-cars">
     <h2>HOT PICKS OF THE WEEK</h2>
