--- a/finalproject/inventory.html
+++ b/finalproject/inventory.html
@@ -65,10 +65,10 @@
     <div class="test-drive-button">
         <a href="contact.html" class="btn primary-btn">Schedule a Test Drive</a>
 </div>
+</div>
+
 
 <dialog id="mydialog"></dialog>
-
-
 
 </main>
 
