--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="author" content="Christopher T. Bahinting"> 
     <meta name="description" content="WDD 231 - Bahins Car Sales as Final Project by  Christopher T. Bahinting.">
-    <title> Inventory page of Final Project</title>
+    <title> Contact Us page of Final Project</title>
 
     <meta property="og:title" content="Bahins Car Sales">
     <meta property="og:description" content="Your trusted partner for quality vehicles and exceptional service.">
