--- a/finalproject/inventory.html
+++ b/finalproject/inventory.html
@@ -91,6 +91,8 @@
         &copy; <span id="currentYear"></span>  | Philippines
         </p>
         <p id="lastModified"></p>
+                <!-- image "Attributions -->
+         <p>Image sources: Images are not mine, it is just downloaded / obtained from the Internet</p>
     </div>
         
         
