--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -116,6 +116,8 @@
         &copy; <span id="currentYear"></span>  | Philippines
         </p>
         <p id="lastModified"></p>
+        <!-- image "Attributions -->
+         <p>Image sources: Images are not mine, it is just downloaded / obtained from the Internet</p>
     </div>
         
         
