--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -101,7 +101,8 @@
         </p>
         <p id="lastModified"></p>
                 <!-- image "Attributions -->
-        <p>Image sources: Images are not mine, it is just downloaded / obtained from the Internet</p>
+        <p>All images used in this project were found online. I do not own any of these images and they are used solely for educational purposes.</p>
+       <p>Credit to the original creators where known. This project is for learning and demonstration only.</p>
     </div>
         
         
