video recording added

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -67,7 +67,10 @@
 
 <div class="featured-cars">
     <h2>HOT PICKS OF THE WEEK</h2>
-    <div id="cars-container" class="grid"></div>
+    <div id="cars-container" class="grid">
+      <h1>bahins cars</h1>
+      <p>this is it</p>
+    </div>
 </div>
 
 <section class="about-us">
@@ -121,7 +124,15 @@
        <p>Credit to the original creators where known. This project is for learning and demonstration only.</p>
     </div>
            
-        
+        <div class="youtube">
+          <h2>VIDEO RECORDINGS</h2>
+          <ul>
+            <li>
+              <a href="https://youtu.be/vc4j_me3oqA ">1 of 2 Video Recording</a>
+              <a href="https://youtu.be/KcgOqgwJiEQ">2 of 2 Video Recording</a>
+          </li>
+          </ul>
+        </div>
 
     </footer>
 </body>
