--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -172,7 +172,15 @@
        <p>All images used in this project were found online. I do not own any of these images and they are used solely for educational purposes.</p>
        <p>Credit to the original creators where known. This project is for learning and demonstration only.</p>
     </div>
-           
+          <div class="youtube">
+          <h2>VIDEO RECORDINGS</h2>
+          <ul>
+            <li>
+              <a href="https://youtu.be/vc4j_me3oqA ">1 of 2 Video Recording</a>
+              <a href="https://youtu.be/KcgOqgwJiEQ">2 of 2 Video Recording</a>
+          </li>
+          </ul>
+        </div>  
 
     </footer>
 </body>
