--- a/finalproject/inventory.html
+++ b/finalproject/inventory.html
@@ -98,6 +98,15 @@
        <p>Credit to the original creators where known. This project is for learning and demonstration only.</p>
     </div>
   
+     <div class="youtube">
+          <h2>VIDEO RECORDINGS</h2>
+          <ul>
+            <li>
+              <a href="https://youtu.be/vc4j_me3oqA ">1 of 2 Video Recording</a>
+              <a href="https://youtu.be/KcgOqgwJiEQ">2 of 2 Video Recording</a>
+          </li>
+          </ul>
+        </div>
         
 
     </footer>
