--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -53,8 +53,8 @@
 
 
 <main>
-   <div class="hero-box">
-    <img src="images/hero_image.jpg" alt="hero image" class="hero-image" loading="lazy">
+   <!-- <div class="hero-box">
+     <img src="images/hero_image.jpg" alt="hero image" class="hero-image" loading="lazy"> 
        
         <div class="cta">
             <h1>Find Your Dream Car Today!</h1>
@@ -63,7 +63,21 @@
                 <a href="contact.html" class="btn primary-btn"><strong>Schedule a Test Drive</strong></a>
         </div>
         </div>
+    </div> -->
+
+  <div class="hero-box">
+    <div class="cta">
+        <h1>Find Your Dream Car Today!</h1>
+        <p>Explore our premium selection and experience the ride of your life.</p>
+
+        <div class="hero-buttons">
+            <a href="contact.html" class="btn primary-btn">
+                <strong>Schedule a Test Drive</strong>
+            </a>
+        </div>
     </div>
+</div>
+
 
 <div class="featured-cars">
     <h2>HOT PICKS OF THE WEEK</h2>
@@ -80,7 +94,7 @@
       Welcome to <strong>Bahins Car Sales</strong>! We are passionate about providing high-quality vehicles that meet your needs and exceed your expectations. With years of experience in the automotive industry, our team is dedicated to helping you find the perfect car at the right price.
     </p>
     <p>
-      Our mission is to make car buying simple, transparent, and enjoyable. Whether you’re searching for your first car, upgrading to something new, or looking for a reliable used vehicle, we are here to guide you every step of the way.
+      Our mission is to make car buying simple, transparent, and enjoyable. Whether you're searching for your first car, upgrading to something new, or looking for a reliable used vehicle, we are here to guide you every step of the way.
     </p>
     <p>
       At <strong>Bahins Car Sales</strong>, we value integrity, customer satisfaction, and excellence. We believe in building lasting relationships with our customers based on trust and reliability.
