--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -53,19 +53,20 @@
 
 
 <main>
-   <!-- <div class="hero-box">
-     <img src="images/hero_image.jpg" alt="hero image" class="hero-image" loading="lazy"> 
-       
-        <div class="cta">
-            <h1>Find Your Dream Car Today!</h1>
-            <p>Explore our premium selection and experience the ride of your life.</p>
-            <div class="hero-buttons">
-                <a href="contact.html" class="btn primary-btn"><strong>Schedule a Test Drive</strong></a>
+ <div class="hero-box">
+    <img src="images/hero_image.jpg" alt="Excited buyer" class="hero-image" loading="lazy">
+    <div class="cta">
+        <h1>Find Your Dream Car Today!</h1>
+        <p>Explore our premium selection and experience the ride of your life.</p>
+        <div class="hero-buttons">
+            <a href="contact.html" class="btn primary-btn">
+                <strong>Schedule a Test Drive</strong>
+            </a>
         </div>
-        </div>
-    </div> -->
+    </div>
+</div>
 
-  <div class="hero-box">
+  <!-- <div class="hero-box">
     <div class="cta">
         <h1>Find Your Dream Car Today!</h1>
         <p>Explore our premium selection and experience the ride of your life.</p>
@@ -76,7 +77,7 @@
             </a>
         </div>
     </div>
-</div>
+</div> -->
 
 
 <div class="featured-cars">
