--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -129,15 +129,9 @@
 
     <div class="map-folder">
     <h2>Our Location:</h2>
-   <iframe 
+   <iframe class="map"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.462011411112!2d124.55768827355813!3d11.178417651653255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3307ff61a02291a9%3A0x9554cff6a7d370fa!2sThe%20Church%20of%20Jesus%20Christ%20of%20Latter-day%20Saints!5e1!3m2!1sen!2sph!4v1764598675980!5m2!1sen!2sph"
-        width="600" 
-        height="450" 
-        style="border:0;" 
-        allowfullscreen 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade"
-        title="Map showing the location of The Church of Jesus Christ of Latter-day Saints">
+        loading="lazy" >
     </iframe>
 
 </div>
