--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -35,7 +35,7 @@
  <div class="menu-container">
     <header>
         <div class="left-section">
-            <img src="images/final_project_logo.svg" alt="Site Logo" width="60">
+            <img src="images/final_project_logo.svg" alt="Site Logo" width="60" height="80">
             <span class="site-title">Bahins Car Sales</span>
         </div>
 
@@ -54,7 +54,7 @@
 
 <main>
  <div class="hero-box">
-    <img src="images/hero_image.jpg" alt="Excited buyer" class="hero-image" loading="lazy">
+    <img src="images/hero_image.webp" alt="Excited buyer" class="hero-image" loading="lazy">
     <div class="cta">
         <h1>Find Your Dream Car Today!</h1>
         <p>Explore our premium selection and experience the ride of your life.</p>
