--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -170,8 +170,9 @@
           <h2>VIDEO RECORDINGS</h2>
           <ul>
             <li>
-              <a href="https://youtu.be/vc4j_me3oqA ">1 of 2 Video Recording</a>
-              <a href="https://youtu.be/KcgOqgwJiEQ">2 of 2 Video Recording</a>
+                
+              <a href="https://youtu.be/6GWVmvXsonA ">Video Recording for Final Project</a>
+           
           </li>
           </ul>
         </div>  
