--- a/finalproject/inventory.html
+++ b/finalproject/inventory.html
@@ -75,6 +75,7 @@
 </main>
 
 <script src="scripts/header_footer.js" defer></script>
+
 <script src="scripts/inventory.js" type="module"></script>
    
       <footer>
@@ -102,8 +103,9 @@
           <h2>VIDEO RECORDINGS</h2>
           <ul>
             <li>
-              <a href="https://youtu.be/vc4j_me3oqA ">1 of 2 Video Recording</a>
-              <a href="https://youtu.be/KcgOqgwJiEQ">2 of 2 Video Recording</a>
+                
+              <a href="https://youtu.be/6GWVmvXsonA ">Video Recording for Final Project</a>
+           
           </li>
           </ul>
         </div>
