--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -122,8 +122,11 @@
         </p>
         <p id="lastModified"></p>
         <!-- image "Attributions -->
+         <div class="attributions">
+          <h2>DISCLAIMER</h2>
        <p>All images used in this project were found online. I do not own any of these images and they are used solely for educational purposes.</p>
        <p>Credit to the original creators where known. This project is for learning and demonstration only.</p>
+    </div>
     </div>
            
         <div class="youtube">
