--- a/finalproject/inventory.html
+++ b/finalproject/inventory.html
@@ -104,7 +104,7 @@
           <ul>
             <li>
                 
-              <a href="https://youtu.be/6GWVmvXsonA ">Video Recording for Final Project</a>
+               <a href="https://youtu.be/9pxyztivPUM">Video Recording for Final Project</a>
            
           </li>
           </ul>
