--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -26,7 +26,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Caramel&family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
 
-
+    <script src="scripts/header_footer.js" defer></script>
+    <script src="scripts/thankyou.js" defer></script>
+    <script src="scripts/date_time.js" defer></script>
 
 
 </head>
@@ -106,10 +108,6 @@
     </div>
     
     </footer>
-
-    <script src="scripts/header_footer.js" defer></script>
-    <script src="scripts/thankyou.js" defer></script>
-    <script src="scripts/date_time.js"></script>
    
 </body>
 </html>
