--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul>
             <li class="nav-menu"><a href="index.html">HOME</a><span class="arrow"></span></li>
             <li class="nav-menu"><a href="https://bahintingchristopher.github.io/wdd231/chamber/index.html">Chamber Project</a></li>
-            <li class="nav-menu"><a href="#">Final Project</a></li>
+            <li class="nav-menu"><a href="https://car-store-sfnj.onrender.com/">Final Project</a></li>
             
         </ul>
     </nav>
