--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="personal">
         <section class="about-me">
             <h2>About Me</h2>
-            <p>I am Christopher T. Bahinting, residing in Lapu-lapu City, Cebu, Philippines. I am a student of Software and Web Development of BYU Idaho through BYU Pathway Worldwide. I have passion in making website and Software and I am having fun to explore and learn many things about Software program creation. Learning new programming language is my main focus now, I am a graduate of Associate in Computer Programming long time ago, that was year 2004 but unfortunately, I was not engage so much in Programming because I was landed a job in AutoCAD Operator, but now, I want to realign my career to programming and I am grateful for the program of the BYU Pathway Worldwide that I am able to take the Web and Software Development course through online.</p>
+            <p>I am Christopher T. Bahinting, residing in Lapu-Lapu City, Cebu, Philippines. I am a student of Software and Web Development at BYU-Idaho through BYU-Pathway Worldwide. I have a passion for making websites and software, and I am having fun exploring and learning about program creation. Learning new programming languages is my main focus now. I graduated with an Associate in Computer Programming back in 2004, but I did not engage much in programming then because I landed a job as an AutoCAD Operator. Now, I want to realign my career with programming, and I am grateful for the BYU-Pathway Worldwide program.</p>
         </section>
         <section class="student-photo">
 
